# api_category_attrs

./: .env_example  README.md  main.py  pyproject.toml
api/: queries.py  schemas.py  services.py
clickhouse/: connect.py
config/: config.py
